third_party/move/move-compiler-v2/tests/more-v1/parser/function_visibility_multiple.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_visibility_multiple.move:2:19
  │
2 │     public(script script) fun f() {}
  │                   ^^^^^^
  │                   │
  │                   Unexpected 'script'
  │                   Expected ')'
